hide horizontal scrolling issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,7 @@
- 
+body {
+    overflow-x: hidden;
+} 
+
 /* start navigation */
 .navbar {
     padding: 0;
